# basics

./: Cargo.toml  Customer Churn prediction.ipynb  GETTING_STARTED.md  PROJECT_MAP.md  README.md  START_HERE.md  WALKTHROUGH.md
examples/: quick_start.rs  tensor_operations.rs
src/: concurrency.rs  fundamentals.rs  main.rs  ownership.rs  performance.rs  structs_enums.rs
src/ml_examples/: linear_regression.rs  matrix_ops.rs  mod.rs  neural_network.rs
