[package]
name = "rust-ai-ml-basics"
version = "0.1.0"
edition = "2021"

# Optimize for performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
# Core ML dependencies
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"

# Linear algebra
nalgebra = "0.32"

# Parallel processing
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (for async examples)
tokio = { version = "1.35", features = ["full"], optional = true }

# Benchmarking
criterion = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

[[example]]
name = "tensor_operations"
path = "examples/tensor_operations.rs"
